# voronoi-diagram

./: .gitignore  CMakeLists.txt  README.md  config.txt
src/: main.cpp
src/generator/: VoronoiGenerator.cpp  VoronoiGenerator.h
src/utils/: FileReader.cpp  FileReader.h  VectorUtils.cpp  VectorUtils.h
tests/: CMakeLists.txt  VoronoiGeneratorTest.cpp
